[gd_scene load_steps=10 format=3 uid="uid://cfkkjss0a1bc5"]

[ext_resource type="Texture2D" uid="uid://dgfdqeul7fka4" path="res://images/monster.png" id="1_i44lo"]
[ext_resource type="Script" uid="uid://diq8a6q06fip4" path="res://scenes/monster/monster.gd" id="1_vd1hn"]
[ext_resource type="Texture2D" uid="uid://c0w3r0yy77p00" path="res://images/magical_rod.png" id="2_hyvb2"]
[ext_resource type="Texture2D" uid="uid://dr73lggkj03gu" path="res://images/purple.png" id="5_18f66"]
[ext_resource type="AudioStream" uid="uid://dn1qi5f7cmerx" path="res://audio/sfx/monster-growl-390285.mp3" id="5_jpvs1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c6twl"]
size = Vector2(266, 268)

[sub_resource type="Animation" id="Animation_jpvs1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OrbLight:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [100.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OrbLight:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_18f66"]
resource_name = "orb_light"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OrbLight:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [5.0, 30.0, 60.0, 100.0, 60.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OrbLight:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jpvs1"]
_data = {
&"RESET": SubResource("Animation_jpvs1"),
&"orb_light": SubResource("Animation_18f66")
}

[node name="Monster" type="CharacterBody2D" groups=["Body"]]
scale = Vector2(0.75, 0.75)
collision_layer = 2
collision_mask = 63
script = ExtResource("1_vd1hn")

[node name="MonsterImg" type="Sprite2D" parent="."]
position = Vector2(-2, 25)
scale = Vector2(0.31559, 0.343306)
skew = 0.0296706
texture = ExtResource("1_i44lo")
flip_h = true

[node name="Rod" type="Sprite2D" parent="."]
position = Vector2(-104, 19)
scale = Vector2(0.135051, 0.133442)
skew = 0.0296706
texture = ExtResource("2_hyvb2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-11, 46)
shape = SubResource("RectangleShape2D_c6twl")

[node name="Timers" type="Node" parent="."]

[node name="OrbCoolDown" type="Timer" parent="Timers"]

[node name="ChangeDirection" type="Timer" parent="Timers"]

[node name="OrbMarker" type="Marker2D" parent="."]
position = Vector2(-101.333, -33.3333)

[node name="OrbLight" type="PointLight2D" parent="."]
position = Vector2(-103, -32)
scale = Vector2(0.0497664, -0.0641936)
color = Color(0.99, 0.8712, 0.87318, 1)
energy = 100.0
texture = ExtResource("5_18f66")
texture_scale = 2.86

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jpvs1")
}

[node name="UI" type="Node2D" parent="."]

[node name="HealthBar" type="ProgressBar" parent="UI"]
modulate = Color(1, 0, 0, 1)
offset_left = -101.0
offset_top = -164.0
offset_right = 101.0
offset_bottom = -145.0
show_percentage = false
metadata/_edit_group_ = true

[node name="HealthNumber" type="RichTextLabel" parent="UI"]
offset_left = -92.0
offset_top = -176.0
offset_right = 99.0
offset_bottom = -137.0
theme_override_font_sizes/italics_font_size = 1
theme_override_font_sizes/normal_font_size = 20
text = "150"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Audio" type="Node" parent="."]

[node name="HitSfx" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5_jpvs1")
volume_db = -10.0
pitch_scale = 1.5
bus = &"SFX"

[connection signal="timeout" from="Timers/OrbCoolDown" to="." method="_orb_cool_down_timeout"]
[connection signal="timeout" from="Timers/ChangeDirection" to="." method="_on_change_direction_timeout"]
